# bat-acoustic-tools

./: .gitignore  LICENSE  README.md  create_symlink.py  import_to_agol.py  process_wavs.py  pyproject.toml  requirements.txt  tests.py  utils.py  wav_to_flac.py  wav_to_sqlite.py
db/: utils.py
src/bat_acoustic_tools/: __main__.py  backup_wavs.py  cli.py  import_to_agol.py  process_wavs.py
src/bat_acoustic_tools/db/: utils.py
src/bat_wav_processing/: cli.py  process_wavs.py  wav_to_flac.py
tests/: backup_tests.py  processing_test.py  processing_tests.py
