[project]
name = "bat_acoustic_tools"
version = "0.1"
authors = [
  { name="Joe Bullard", email="joe.bullard@avonwildlifetrust.org.uk" },
]
description = "Tools to process bat bioacoustic data"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "batdetect2==1.0.8",
    "guano==1.0.15",
    "ffmpeg-python==0.2.0",
    "typer==0.15.1"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/joekbullard/bat-bioacoustics-processing"
Issues = "https://github.com/joekbullard/bat-bioacoustics-processing/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
process-wav = "bat_acoustic_tools.cli:main"
